# rust_game

./: .gitignore  Cargo.toml
assets/: default.frag  default.vert
client/: Cargo.toml  build_log.txt
client/assets/: default.vert  ui.vert
client/assets/shaders/: default.frag  ui.frag  ui.vert
client/src/: error.rs  game_state.rs  main.rs  model.rs  network.rs  render.rs
client/src/handler/: texture.rs
client/src/test/: mod.rs  network.rs  world.rs
client/src/ui/: mod.rs  panel.rs  render_state.rs  textbox.rs  traits.rs  utils.rs  wrapper.rs
client/src/ui/elements/: mod.rs  panel.rs  textbox.rs
server/: Cargo.toml
server/src/: file_handler.rs  main.rs  network.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  model.rs  render.rs
